avoids page break in middle of TOC list

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ h2.chapter {
 h1,h2,h3,h4,h5 {
     font-weight: bold;
     page-break-after: avoid;
-    page-break-inside:avoid;
+    page-break-inside: avoid;
     text-align: left;
 }
 
@@ -254,6 +254,7 @@ ul.toc {
     list-style: none;
     margin: 0;
     padding: 0;
+    page-break-inside: avoid;
 }
 
 /* create page numbers using target-counter in the TOC */
